--- a/css3_basic_day02.html
+++ b/css3_basic_day02.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<title>CSS3 | Day 2 | Basic Exercises</title>
 </head>
 <body>
 	<div class="container">
