--- a/css3_basic_day02.html
+++ b/css3_basic_day02.html
@@ -48,11 +48,11 @@
 		<div class="rating">
 			<p>89 Ratings</p>
 			
-			<span class="fa fa-star checked"></span>
-			<span class="fa fa-star checked"></span>
-			<span class="fa fa-star checked"></span>
-			<span class="fa fa-star checked"></span>
-			<span class="fa fa-star"></span>
+			<span class="blackstar">&#9733;</span>
+			<span class="blackstar">&#9733;</span>
+			<span class="blackstar">&#9733;</span>
+			<span class="blackstar">&#9733;</span>
+			<span class="whitestar">&#9734;</span>
 		</div>
 	</div>
 
