--- a/ex3/CSS3_Day2_Advanced_Exercises.html
+++ b/ex3/CSS3_Day2_Advanced_Exercises.html
@@ -1,33 +1,44 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="CSS 3 | Day 2 | Advanced Exercises.css">
+	<link rel="stylesheet" type="text/css" href="CSS3_Day2_Advanced_Exercises.css">
 	<title>CSS 3 | Day 2 | Advanced Exercises</title>
 </head>
 <body>
-<content>
-	<header>
-		<span>Logo</span>
-	</header>
 
-	<ul>
-		<li><a href="blank">Home</a></li>
-		<li><a href="blank">Products</a></li>
-		<li><a href="blank">Services</a></li>
-		<li><a href="blank">About</a></li>
-		<li><a href="blank">Contact</a></li>
-	</ul>
+	<div class="container">
+		<header>
+			<span><img src="#"></span>
+		</header>
+			<ul>
+				<li><a href="blank">Home</a></li>
+				<li><a href="blank">Products</a></li>
+				<li><a href="blank">Services</a></li>
+				<li><a href="blank">About</a></li>
+				<li><a href="blank">Contact</a></li>
+			</ul>
 
-	<div><p>Feature</p>
+			<div>
+				<p>Feature</p>
+			</div>
+
+			<section class="columns">
+	
+				<div class="column">
+					<p>Column 1</p>
+				</div>
+				
+				<div class="column col-middle">
+					<p>Column 2</p>
+				</div>
+			  
+			  <div class="column">
+					<p>Column 3</p>
+				</div>
+	
+			</section>	
+
+			<footer>&copy; Copyright 2011</footer>
 	</div>
-
-	<div>
-		<section>Column One</section>
-		<section>Column Two</section>
-		<section>Column Three</section>
-	</div>
-
-	<footer>&copy; Copyright 2011</footer>
-</content>
 </body>
 </html>
